--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-schema-faker",
+  "name": "json-schema-faker-dev",
   "version": "0.5.0-rcv.44",
   "description": "JSON-Schema + fake data generators",
   "homepage": "http://json-schema-faker.js.org",
@@ -69,7 +69,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/json-schema-faker/json-schema-faker"
+    "url": "https://github.com/mcxue/json-schema-faker"
   },
   "bugs": "https://github.com/json-schema-faker/json-schema-faker/issues",
   "license": "MIT",
